# periodicum

./: Cargo.toml
data/resources/: style.css
src/: backend.rs  dialogo.ui  gui.rs  main.rs  tabela.rs  utils.rs  window.ui
