[package]
name = "periodicum"
version = "0.3.0"
authors = ["Márcio <marciosr10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gtk]
version = "0.14.0"
features = ["v3_24"]

[dependencies.gdk]
version = "0.14.0"
features = ["v3_24"]

[dependencies.gio]
version = "0.14.0"

[dependencies.glib]
version = "0.14.0"

[dependencies.pango]
version = "0.14.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
rust-embed = "6.2.0"

