[package]
name = "periodicum"
version = "0.4.1"
authors = ["Márcio <marciosr10@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
rust-embed = "6.3.0"

[dependencies.gtk]
package = "gtk4"
version = "0.4.7"
features = ["v4_6"]

